Fix Spacing Issue Between Event Tiles
This commit fixes issues with spacing between event tiles.

This issue was actually caused by the appearance of the scroll bar. To fix this, I just hid the scroll bar on all browsers and changed the detail column's right position back to the original 24px that it was.

--- a/frontend/src/app/event/event-page/event-page.component.css
+++ b/frontend/src/app/event/event-page/event-page.component.css
@@ -1,5 +1,15 @@
 .container {
     padding-left: 24px;
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+    /* Firefox */
+
+}
+
+.container::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
 }
 
 .events-grid {
@@ -40,7 +50,7 @@
 
 .details-column {
     position: fixed;
-    right: 36px;
+    right: 24px;
     bottom: 24px;
     top: 170px;
     width: 548px;
